Fixed some layout issues in the form and changed projects color scheme

--- a/pages/styles/Contact.module.scss
+++ b/pages/styles/Contact.module.scss
@@ -37,7 +37,7 @@ $TextColor: dodgerblue;
   outline: none;
   box-shadow: none;
   font-size: 18px;
-  padding: 0 10px;
+  padding: 2px 10px;
   color: #000000;
   z-index: 1;
 }
@@ -51,13 +51,22 @@ $TextColor: dodgerblue;
   input {
     @extend %fieldInputs;
   }
+}
+
+.message {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  color: $TextColor;
+
+  .labels {
+    top: 55px;
+  }
 
   textarea {
     @extend %fieldInputs;
     resize: none;
-    padding: 10px 0;
-    height: 100px;
-    position: relative;
+    padding: 10px 2px;
   }
 }
 
@@ -97,15 +106,15 @@ $TextColor: dodgerblue;
   height: 100%;
 }
 
-.fields textarea:focus + .labels,
-.fields textarea:valid + .labels {
+.message textarea:focus + .labels,
+.message textarea:valid + .labels {
   top: -35px;
   left: -10px;
   font-size: 12px;
 }
 
-.fields textarea:focus ~ .line,
-.fields textarea:valid ~ .line {
+.message textarea:focus ~ .line,
+.message textarea:valid ~ .line {
   height: 100%;
 }
 
