--- a/pages/styles/Projects.module.scss
+++ b/pages/styles/Projects.module.scss
@@ -1,12 +1,12 @@
 @import "./Global.scss";
 
-$ShelfColor: #2a363b;
-$ProjectsBackground: #1e2d33;
+$ShelfColor: #110f0e;
+$ProjectsBackground: #36332e;
 
 .Projects {
   margin: 0;
   padding: 0;
-  color: white;
+  color: wheat;
   background-color: $ProjectsBackground;
   height: 100%;
 }
